<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"     >
    
 
    <!-- 1 column -->
    <TableRow
        android:id="@+id/trTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip" >
 
        <TextView
            android:id="@+id/tvTitulo"
            android:text="@string/primerAno"/>
        
    </TableRow>
 
     <!-- 3 columns -->
    <TableRow
        android:id="@+id/trSubtitulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dip" >

        <TextView
            android:id="@+id/tvSD"
            android:gravity="center"
            android:text="@string/trimestreSD" />

        <TextView
            android:id="@+id/tvEM"
            android:gravity="center"
            android:text="@string/trimestreEM"/>
        
        <TextView
            android:id="@+id/tvAJ"
        	android:gravity="center"            
            android:text="@string/trimestreAJ"/>  
                  
    </TableRow>
 
    
     <!-- 3 columns -->
    <TableRow
        android:id="@+id/trFila1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
 
     	  <!--Materia 1 -->

            
         <TextView
            android:id="@+id/tvMatematicasUno"
            android:text="@string/matematicasUno" />

        <TableRow>

            <Button
                android:id="@+id/bMatematicasII"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:gravity="clip_vertical"
                android:onClick="agregarMateria"
                android:text="@string/matematicasDos"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/bMatematicasI"
                android:layout_width="69dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:gravity="clip_vertical"
                android:onClick="agregarMateria"
                android:text="@string/matematicasUno"
                android:textSize="15sp" />
        </TableRow>
                  
        
        <TextView
            android:id="@+id/tvMatematicasDos"
            android:text="@string/matematicasDos"/>
        
        <TextView
            android:id="@+id/tvMatematicasTres"
            android:text="@string/matematicasTres"/>         
    </TableRow>

    
</TableLayout>

